--- a/wrangler.example.toml
+++ b/wrangler.example.toml
@@ -10,5 +10,5 @@ WEBHOOK_SECRET = ""
 
 [[kv_namespaces]]
 binding = "BLOG_CACHE"
-id = "<YOUR_NAMESPACE_ID>"
-preview_id = ""
+# id = "<YOUR_NAMESPACE_ID>"
+# preview_id = "<YOUR_PREVIEW_NAMESPACE_ID>"
