--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "scripts": {
     "deploy": "wrangler deploy",
-    "start": "wrangler dev"
+    "start": "wrangler dev",
+    "test": "vitest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
+    "deepmerge": "^4.3.1",
     "typescript": "^5.0.4",
+    "vitest": "^0.34.4",
     "wrangler": "^3.0.0"
   },
   "dependencies": {
