--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,5 +22,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - name: Execute Unit tests
-      - run: npm ci
-	    - run: npm run test
+      - run: |
+        npm ci
+        npm run test
