--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,6 +22,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - name: Execute Unit tests
-      - run: |
+        run: |
           npm ci
           npm run test
