--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "deploy": "wrangler deploy",
     "start": "wrangler dev",
-    "test": "vitest"
+    "test": "vitest",
+    "test-run": "vitest run"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230419.0",
